Fixed Missing Static HTML along with unreadability parsing issue

--- a/components/ContentBlock/ContentBlock.module.scss
+++ b/components/ContentBlock/ContentBlock.module.scss
@@ -1,5 +1,5 @@
 
-.container {
+.content {
   background-color: var(--background-secondary-color);
   padding: 5pt 10pt;
   border-color: var(--border-highlight-color);
